--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Calculator</title>
-    <link rel="stylesheet" type="" href="/style.css" />
-    <script defer src="/script.js"></script>
+    <link rel="stylesheet" type="" href="style.css" />
+    <script defer src="script.js"></script>
   </head>
   <body>
     <div class="calculator">
