--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <button class="btn" onclick="clearResult()">C</button>
       <button class="btn" onclick="appendToResult('%')">%</button>
       <button class="btn" onclick="appendToResult('^')">^</button>
-      <button class="btn" onclick="appendToResult('sqrt')">√</button>
+      <button class="btn" onclick="appendToResult('√')">√</button>
 
       <button class="btn" onclick="appendToResult('7')">7</button>
       <button class="btn" onclick="appendToResult('8')">8</button>
